--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ itsdangerous==1.1.0
 Jinja2==2.11.2
 lxml==4.6.2
 MarkupSafe==1.1.1
+numba==0.53.1
 requests==2.23.0
 soupsieve==2.0.1
 urllib3==1.25.9
